[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/dices/SW.png" type="Texture" id=2]
[ext_resource path="res://gameNodes/ActionList.gd" type="Script" id=3]
[ext_resource path="res://assets/action_bg.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=6]
size = 28
outline_color = Color( 0.196078, 0.196078, 0.196078, 1 )
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 3
outline_color = Color( 0.164706, 0.164706, 0.164706, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_color = Color( 0.196078, 0.196078, 0.196078, 1 )
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_size = 5
outline_color = Color( 0.196078, 0.196078, 0.196078, 1 )
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[node name="ActionList" type="Control"]
margin_right = 106.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 25
alignment = 1

[node name="action" type="Control" parent="VBox"]
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )

[node name="action_bg" type="TextureRect" parent="VBox/action"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -72.0
margin_right = 161.0
margin_bottom = 78.0
rect_min_size = Vector2( 300, 150 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="VBox/action"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -51.5
margin_right = 57.0
margin_bottom = -18.5
custom_colors/font_color = Color( 0.372549, 0.372549, 0.372549, 1 )
custom_fonts/font = SubResource( 6 )
text = "ENEMY"
valign = 1

[node name="btn_action1" type="Button" parent="VBox/action"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -10.0
margin_right = 20.0
margin_bottom = 46.0
rect_min_size = Vector2( 66, 40 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
flat = true

[node name="Label" type="Label" parent="VBox/action/btn_action1"]
anchor_right = 1.0
margin_left = 9.0
margin_top = 2.0
margin_right = -7.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_fonts/font = SubResource( 5 )
text = "action1"
align = 1
valign = 1

[node name="HBoxReq" type="HBoxContainer" parent="VBox/action/btn_action1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -10.0
margin_right = 136.0
margin_bottom = 30.0
custom_constants/separation = -4
alignment = 1

[node name="r1" type="TextureRect" parent="VBox/action/btn_action1/HBoxReq"]
margin_left = 8.0
margin_right = 48.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r2" type="TextureRect" parent="VBox/action/btn_action1/HBoxReq"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r3" type="TextureRect" parent="VBox/action/btn_action1/HBoxReq"]
margin_left = 80.0
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r4" type="TextureRect" parent="VBox/action/btn_action1/HBoxReq"]
visible = false
margin_left = 78.0
margin_right = 118.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r5" type="TextureRect" parent="VBox/action/btn_action1/HBoxReq"]
visible = false
margin_left = 104.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="btn_action2" type="Button" parent="VBox/action"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -13.0
margin_right = 113.0
margin_bottom = 43.0
rect_min_size = Vector2( 66, 40 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
flat = true

[node name="Label" type="Label" parent="VBox/action/btn_action2"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.188235, 0.188235, 0.188235, 1 )
custom_fonts/font = SubResource( 5 )
text = "action2"
align = 1
valign = 1

[node name="HBoxReq" type="HBoxContainer" parent="VBox/action/btn_action2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -10.0
margin_right = 96.0
margin_bottom = 30.0
custom_constants/separation = -4
alignment = 1

[node name="r1" type="TextureRect" parent="VBox/action/btn_action2/HBoxReq"]
margin_left = 6.0
margin_right = 46.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r2" type="TextureRect" parent="VBox/action/btn_action2/HBoxReq"]
margin_left = 42.0
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r3" type="TextureRect" parent="VBox/action/btn_action2/HBoxReq"]
visible = false
margin_left = 72.0
margin_right = 112.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r4" type="TextureRect" parent="VBox/action/btn_action2/HBoxReq"]
visible = false
margin_left = 78.0
margin_right = 118.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="r5" type="TextureRect" parent="VBox/action/btn_action2/HBoxReq"]
visible = false
margin_left = 104.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true

[node name="HintLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -138.5
margin_top = -37.0
margin_right = 138.5
margin_bottom = 3.0
custom_colors/font_color = Color( 0.909804, 1, 0.592157, 1 )
custom_fonts/font = SubResource( 4 )
text = "ATTACK ENEMY"
align = 1
valign = 1
